--- a/DD/Makefile
+++ b/DD/Makefile
@@ -1,4 +1,4 @@
-all:twod.so cutwo.so 
+all: calkel.so #twod.so cutwo.so
 twod.so:twod.c
 	gcc twod.c -lm -fopenmp -fPIC -shared -O3 -o twod.so
 twod.o:twod.c
@@ -8,3 +8,5 @@ cutwo.so:cutwo.cu
 	nvcc cutwo.cu -shared --compiler-options "-fPIC"  -o cutwo.so
 # cutwo.so:cutwo.o twod.o 
 # 	gcc cutwo.o twod.o -shared -o cutwo.so
+calkel.so:calkel.cu
+	nvcc calkel.cu -shared --compiler-options "-fPIC"  -o calkel.so
